--- a/2024-05-15_resume.md
+++ b/2024-05-15_resume.md
@@ -1,6 +1,6 @@
-![EAEhello](https://www.canva.com/design/DAGFUkLH06A/dxxBD0ytO-QYXaI-O39jfg/view?utm_content=DAGFUkLH06A&utm_campaign=designshare&utm_medium=link&utm_source=sharebutton&mode=preview)
-
-
+---
+layout: default
+---
 # Elvis Abraham Eugene
 
 Groton, CT | ![LinkedIn](www.linkedin.com/in/elviseugene/) 
