--- a/404.md
+++ b/404.md
@@ -1,4 +1,4 @@
 ---
 permalink: /404.html
 ---
-EAE's website is still a work in progress. Check back infrequently please. 
+404 Not found: Elvis's website is still a work in progress. Check back infrequently please. 
