--- a/2024-05-15_resume.md.md
+++ b/2024-05-15_resume.md.md
@@ -1,7 +1,10 @@
+---
+layout: default
+permalink: /resume.html
+---
+# Elvis A. Eugene
 
-# Elvis Abraham Eugene
-
-Groton, CT
+Groton, CT | ![LinkedIn](www.linkedin.com/in/elviseugene/) 
 
 ## Hightlights
 * Computational scientist with an expertise in languagues, both machine understandable and the spoken word: BASIC, Java, C, C++, C#, Python, R, git, Github, Jupyter, Google Collaboratory, and mathematics and probability.
@@ -33,8 +36,8 @@ Notre Dame, IN (July 2017 - May 2022)
 * Created a framework for data-driven decision-making under model-form uncertainty based on gray-box Bayesian hybrid models (BHM).
 * Demonstrated that novel polymer membranes are promising for the sustainable recovery of lithium using predictive mathematical models for structure property relationships, superstructure optimization for system design, and nonlinear parameter estimation to define transport phenomena.
 * Proposed integrated vision of data science to revolutionize molecular-to-systems engineering.
-* Directly mentored 1 graduate student and 1 undergraduate researcher resulting in 2 journal articles and 1 successful
-fellowship grant.
+* Mentored 3 graduate students and 1 undergraduate researcher resulting in 4 journal articles and 2 successful
+fellowship grants.
 
 ## Professional Experience
 ### Senior Process Engineer 
