--- a/404.md
+++ b/404.md
@@ -2,3 +2,6 @@
 permalink: /404.html
 ---
 404 Not found: Elvis's website is still a work in progress. Check back infrequently please. 
+
+
+![thankyouforcoming](assets/images/thank-you-sunset1.png)
