--- a/404.md
+++ b/404.md
@@ -6,4 +6,4 @@ permalink: /404.html
 
 ![thankyouforcoming](assets/img/thank-you-sunset1.png)
 
-[panic](https://www.canva.com/design/DAGErSMXxA4/8We7my7JaKBZNAu6vgQktw/watch?utm_content=DAGErSMXxA4&utm_campaign=designshare&utm_medium=link&utm_source=editor)
+![panic](https://www.canva.com/design/DAGErSMXxA4/8We7my7JaKBZNAu6vgQktw/watch?utm_content=DAGErSMXxA4&utm_campaign=designshare&utm_medium=link&utm_source=editor)
